# reinforcement_learning_hopper

./: .gitignore  README.md
hopper_training/: CMakeLists.txt  package.xml
hopper_training/config/: qlearn_params_backup.yaml
hopper_training/launch/: main.launch
hopper_training/msg/: QLearnElement.msg  QLearnMatrix.msg  QLearnPoint.msg
hopper_training/src/: joint_publisher.py  monoped_env.py  monoped_state.py  simple_qlearn.py  start_training.py  start_training_v2.py
hopper_training/training_results/: openaigym.episode_batch.0.29208.stats.json  openaigym.manifest.0.29208.manifest.json
legged_robots_description/: CMakeLists.txt  package.xml
legged_robots_sims/: CMakeLists.txt  package.xml
legged_robots_sims/config/: monoped.yaml
legged_robots_sims/docs/: Topics_published_towr.txt  Untitled Document 3  error_towr_execution.txt  urdf_to_sdf.sh
legged_robots_sims/install_scripts/: install_ipopt.sh  replace_text.py  start_everything.sh
legged_robots_sims/launch/: main.launch  main_2D.launch  monoped_control.launch  put_robot_in_world.launch  robot_simulation_test.launch  spawn_monoped.launch  spawn_monoped_2D.launch  speed_tests.launch  start_world.launch  world_to_base_tf_publish.launch
legged_robots_sims/prespectives/: monoped.perspective
legged_robots_sims/robots/: macros.xacro  materials.xacro
legged_robots_sims/scripts/: joint_publisher.py  joint_publisher_advanced.py  world_to_base_tf_publisher.py
legged_robots_sims/urdf/: monoped_controled.sdf  monoped_controled.urdf  monoped_controled_2D.urdf
legged_robots_sims/worlds/: speed_tests.world
(+9 files in other folders)
